--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "date-fns": "^4.0.0",
+    "lucide-react": "^0.460.0",
+    "jose": "^5.0.0",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -21,6 +26,9 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@storybook/react": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/addon-essentials": "^8.0.0"
   }
 }
