feat: complete database integration and employee ui refinements

--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "clsx": "^2.0.0",
+    "date-fns": "^4.0.0",
+    "jose": "^5.0.0",
+    "lucide-react": "^0.460.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "date-fns": "^4.0.0",
-    "lucide-react": "^0.460.0",
-    "jose": "^5.0.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/react": "^8.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
+    "prisma": "^5.10.2",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@storybook/react": "^8.0.0",
-    "@storybook/nextjs": "^8.0.0",
-    "@storybook/addon-essentials": "^8.0.0"
+    "typescript": "^5"
   }
 }
